<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv_transfer"
    app:cardElevation="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/iv_icon_transfer"
            android:background="@drawable/ic_transfer"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_icon_transfer"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            android:id="@+id/tv_transfer"
            android:text="@string/transfer"
            android:contentDescription="@string/jenis_transaksi"
            android:textSize="18sp"
            android:fontFamily="@font/calibri"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/iv_icon_transfer"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/tv_transfer_ke"
            android:layout_marginBottom="5dp"
            android:text="@string/transfer_ke"
            android:contentDescription="@string/transfer_ke"
            android:textSize="12sp"
            android:fontFamily="@font/calibri"
            android:textColor="@color/grey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_transfer_ke"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/gopay"
            android:contentDescription="@string/jenis_dompet"
            android:textSize="12sp"
            android:fontFamily="@font/calibri"
            android:textColor="@color/grey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:id="@+id/tv_idr"
            android:text="@string/idr"
            android:contentDescription="@string/rupiah"
            android:textSize="18sp"
            android:fontFamily="@font/calibri"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/tv_nominal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nominal"
            android:text="@string/_21_800"
            android:contentDescription="@string/nominal"
            android:textSize="18sp"
            android:fontFamily="@font/calibri"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>