<?xml version="1.0" encoding="utf-8"?><!--<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    app:strokeColor="@android:color/transparent"
    app:cardBackgroundColor="@android:color/transparent"
    android:layout_marginVertical="4dp"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_transaksi"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_transfer" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="8dp">

            <TextView
                android:id="@+id/tv_tipe_transaksi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/jenis_transaksi"
                android:fontFamily="@font/calibri"
                android:text="@string/transfer"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_keterangan_transaksi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/transfer_ke_bank_bca"
                android:fontFamily="@font/calibri"
                android:text="@string/transfer_ke_bank_bca"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tipe_transaksi" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_nominal_idr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/rupiah"
            android:fontFamily="@font/calibri"
            android:text="@string/idr"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>